--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "fabric": "^5.3.0",
+    "fabricjs-react": "^1.2.1",
     "next": "13.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-p5": "^1.3.35",
     "typescript": "5.2.2"
   }
